[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "aeo-validator-service"
version = "0.1.0"
description = "Always-on validator service for AEO + Kinetic Gain Protocol Suite documents. Validate by URL, track content-hash drift, schedule re-fetch, emit structured diffs. The fourth layer of the AEO Reference Stack."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Miz Causevic", email = "miz@kineticgain.com" },
]
keywords = ["aeo", "validator", "drift", "fastapi", "kinetic-gain-protocol-suite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic>=2.7",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
aeo-validator-service = "aeo_validator_service.__main__:main"

[project.urls]
Homepage      = "https://github.com/mizcausevic-dev/aeo-validator-service"
Repository    = "https://github.com/mizcausevic-dev/aeo-validator-service"
Issues        = "https://github.com/mizcausevic-dev/aeo-validator-service/issues"
"AEO Spec"    = "https://github.com/mizcausevic-dev/aeo-protocol-spec"
"Author Site" = "https://kineticgain.com/"

[tool.hatch.build.targets.wheel]
packages = ["src/aeo_validator_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:starlette.*",
    "ignore::DeprecationWarning:fastapi.*",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
